// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with options 1`] = `
<div
  data-simplebar="init"
>
  <div
    class="simplebar-wrapper"
  >
    <div
      class="simplebar-height-auto-observer-wrapper"
    >
      <div
        class="simplebar-height-auto-observer"
      />
    </div>
    <div
      class="simplebar-mask"
    >
      <div
        class="simplebar-offset"
        style="right: -0px; bottom: 0px;"
      >
        <div
          class="simplebar-content-wrapper"
          style="height: auto; overflow-x: hidden; overflow-y: scroll;"
        >
          <div
            class="simplebar-content"
          >
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="simplebar-placeholder"
      style="width: 0px; height: 0px;"
    />
  </div>
  <div
    class="simplebar-track simplebar-horizontal"
    style="visibility: hidden;"
  >
    <div
      class="simplebar-scrollbar"
      style="width: 0px; display: none;"
    />
  </div>
  <div
    class="simplebar-track simplebar-vertical"
    style="visibility: visible;"
  >
    <div
      class="simplebar-scrollbar"
      style="height: 0px; display: none;"
    />
  </div>
</div>
`;

exports[`renders without crashing 1`] = `
<div
  data-simplebar="init"
>
  <div
    class="simplebar-wrapper"
  >
    <div
      class="simplebar-height-auto-observer-wrapper"
    >
      <div
        class="simplebar-height-auto-observer"
      />
    </div>
    <div
      class="simplebar-mask"
    >
      <div
        class="simplebar-offset"
        style="right: 0px; bottom: 0px;"
      >
        <div
          class="simplebar-content-wrapper"
          style="height: auto; overflow-x: hidden; overflow-y: hidden;"
        >
          <div
            class="simplebar-content"
          >
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="simplebar-placeholder"
      style="width: 0px; height: 0px;"
    />
  </div>
  <div
    class="simplebar-track simplebar-horizontal"
    style="visibility: hidden;"
  >
    <div
      class="simplebar-scrollbar"
      style="width: 0px; display: none;"
    />
  </div>
  <div
    class="simplebar-track simplebar-vertical"
    style="visibility: hidden;"
  >
    <div
      class="simplebar-scrollbar"
      style="height: 0px; display: none;"
    />
  </div>
</div>
`;
